# VML-FNA

./: .gitignore  .gitmodules  CMakeLists.txt  cmake_debug.sh  dependencies.txt
cmake/: VMLBuild.cmake
src/: CMakeLists.txt  FNA.c  FNA.h
src/Audio/: SoundEffect.cs
src/FNAPlatform/: FNAPlatform.cs  SDL2_FNAPlatform.cs  SDL3_FNAPlatform.cs  SDL3_FNAPlatform_Stub.cs  Vita_FNAPlatform.cs
src/Graphics/: FNA3D.cs  GraphicsDevice.cs  SpriteBatch.cs  Texture2D.cs  Texture3D.cs  TextureCube.cs
src/Graphics/Effect/: Effect.cs  EffectParameter.cs  Resources.cs
src/Graphics/Vertices/: DynamicIndexBuffer.cs  DynamicVertexBuffer.cs  IndexBuffer.cs  VertexBuffer.cs
src/Media/Xiph/: VideoPlayer.cs
src/Storage/: StorageContainer.cs
src/Utilities/: IntPtrExtensions.cs  StreamExtensions.cs
