cmake_minimum_required(VERSION 3.0)

project(src ASM)

set(FNA_SOURCES
    "Audio/AudioCategory.cs"
	"Audio/AudioChannels.cs"
	"Audio/AudioEmitter.cs"
	"Audio/AudioEngine.cs"
	"Audio/AudioListener.cs"
	"Audio/AudioStopOptions.cs"
	"Audio/Cue.cs"
	"Audio/DynamicSoundEffectInstance.cs"
	"Audio/InstancePlayLimitException.cs"
	"Audio/Microphone.cs"
	"Audio/MicrophoneState.cs"
	"Audio/NoAudioHardwareException.cs"
	"Audio/NoMicrophoneConnectedException.cs"
	"Audio/RendererDetail.cs"
	"Audio/SoundBank.cs"
	"Audio/SoundEffect.cs"
	"Audio/SoundEffectInstance.cs"
	"Audio/SoundState.cs"
	"Audio/WaveBank.cs"
	"BoundingBox.cs"
	"BoundingFrustum.cs"
	"BoundingSphere.cs"
	"Color.cs"
	"ContainmentType.cs"
	"Content/ContentExtensions.cs"
	"Content/ContentLoadException.cs"
	"Content/ContentManager.cs"
	"Content/ContentReader.cs"
	"Content/ContentReaders/AlphaTestEffectReader.cs"
	"Content/ContentReaders/ArrayReader.cs"
	"Content/ContentReaders/BasicEffectReader.cs"
	"Content/ContentReaders/BooleanReader.cs"
	"Content/ContentReaders/BoundingBoxReader.cs"
	"Content/ContentReaders/BoundingFrustumReader.cs"
	"Content/ContentReaders/BoundingSphereReader.cs"
	"Content/ContentReaders/ByteReader.cs"
	"Content/ContentReaders/CharReader.cs"
	"Content/ContentReaders/ColorReader.cs"
	"Content/ContentReaders/CurveReader.cs"
	"Content/ContentReaders/DateTimeReader.cs"
	"Content/ContentReaders/DecimalReader.cs"
	"Content/ContentReaders/DictionaryReader.cs"
	"Content/ContentReaders/DoubleReader.cs"
	"Content/ContentReaders/DualTextureEffectReader.cs"
	"Content/ContentReaders/EffectMaterialReader.cs"
	"Content/ContentReaders/EffectReader.cs"
	"Content/ContentReaders/EnumReader.cs"
	"Content/ContentReaders/EnvironmentMapEffectReader.cs"
	"Content/ContentReaders/ExternalReferenceReader.cs"
	"Content/ContentReaders/IndexBufferReader.cs"
	"Content/ContentReaders/Int16Reader.cs"
	"Content/ContentReaders/Int32Reader.cs"
	"Content/ContentReaders/Int64Reader.cs"
	"Content/ContentReaders/ListReader.cs"
	"Content/ContentReaders/MatrixReader.cs"
	"Content/ContentReaders/ModelReader.cs"
	"Content/ContentReaders/NullableReader.cs"
	"Content/ContentReaders/PlaneReader.cs"
	"Content/ContentReaders/PointReader.cs"
	"Content/ContentReaders/QuaternionReader.cs"
	"Content/ContentReaders/RayReader.cs"
	"Content/ContentReaders/RectangleReader.cs"
	"Content/ContentReaders/ReflectiveReader.cs"
	"Content/ContentReaders/SByteReader.cs"
	"Content/ContentReaders/SingleReader.cs"
	"Content/ContentReaders/SkinnedEffectReader.cs"
	"Content/ContentReaders/SongReader.cs"
	"Content/ContentReaders/SoundEffectReader.cs"
	"Content/ContentReaders/SpriteFontReader.cs"
	"Content/ContentReaders/StringReader.cs"
	"Content/ContentReaders/Texture2DReader.cs"
	"Content/ContentReaders/Texture3DReader.cs"
	"Content/ContentReaders/TextureCubeReader.cs"
	"Content/ContentReaders/TextureReader.cs"
	"Content/ContentReaders/TimeSpanReader.cs"
	"Content/ContentReaders/UInt16Reader.cs"
	"Content/ContentReaders/UInt32Reader.cs"
	"Content/ContentReaders/UInt64Reader.cs"
	"Content/ContentReaders/Vector2Reader.cs"
	"Content/ContentReaders/Vector3Reader.cs"
	"Content/ContentReaders/Vector4Reader.cs"
	"Content/ContentReaders/VertexBufferReader.cs"
	"Content/ContentReaders/VertexDeclarationReader.cs"
	"Content/ContentReaders/VideoReader.cs"
	"Content/ContentSerializerAttribute.cs"
	"Content/ContentSerializerCollectionItemNameAttribute.cs"
	"Content/ContentSerializerIgnoreAttribute.cs"
	"Content/ContentSerializerRuntimeTypeAttribute.cs"
	"Content/ContentSerializerTypeVersionAttribute.cs"
	"Content/ContentTypeReader.cs"
	"Content/ContentTypeReaderManager.cs"
	"Content/LzxDecoder.cs"
	"Content/ResourceContentManager.cs"
	"Curve.cs"
	"CurveContinuity.cs"
	"CurveKey.cs"
	"CurveKeyCollection.cs"
	"CurveLoopType.cs"
	"CurveTangent.cs"
	"Design/BoundingBoxConverter.cs"
	"Design/BoundingSphereConverter.cs"
	"Design/ColorConverter.cs"
	"Design/MathTypeConverter.cs"
	"Design/MatrixConverter.cs"
	"Design/PlaneConverter.cs"
	"Design/PointConverter.cs"
	"Design/QuaternionConverter.cs"
	"Design/RayConverter.cs"
	"Design/RectangleConverter.cs"
	"Design/Vector2Converter.cs"
	"Design/Vector3Converter.cs"
	"Design/Vector4Converter.cs"
	"DisplayOrientation.cs"
	"DrawableGameComponent.cs"
	"FNALoggerEXT.cs"
	"FNAPlatform/FNAPlatform.cs"
	"FNAPlatform/FNAWindow.cs"
	"FNAPlatform/SDL2_FNAPlatform.cs"
	"FNAPlatform/SDL3_FNAPlatform_Stub.cs"
	"FNAPlatform/Vita_FNAPlatform.cs"
	"FrameworkDispatcher.cs"
	"Game.cs"
	"GameComponent.cs"
	"GameComponentCollection.cs"
	"GameComponentCollectionEventArgs.cs"
	"GameServiceContainer.cs"
	"GameTime.cs"
	"GameWindow.cs"
	"Graphics/ClearOptions.cs"
	"Graphics/ColorWriteChannels.cs"
	"Graphics/CubeMapFace.cs"
	"Graphics/DepthFormat.cs"
	"Graphics/DeviceLostException.cs"
	"Graphics/DeviceNotResetException.cs"
	"Graphics/DirectionalLight.cs"
	"Graphics/DisplayMode.cs"
	"Graphics/DisplayModeCollection.cs"
	"Graphics/DxtUtil.cs"
	"Graphics/Effect/Effect.cs"
	"Graphics/Effect/EffectAnnotation.cs"
	"Graphics/Effect/EffectAnnotationCollection.cs"
	"Graphics/Effect/EffectMaterial.cs"
	"Graphics/Effect/EffectParameter.cs"
	"Graphics/Effect/EffectParameterClass.cs"
	"Graphics/Effect/EffectParameterCollection.cs"
	"Graphics/Effect/EffectParameterType.cs"
	"Graphics/Effect/EffectPass.cs"
	"Graphics/Effect/EffectPassCollection.cs"
	"Graphics/Effect/EffectTechnique.cs"
	"Graphics/Effect/EffectTechniqueCollection.cs"
	"Graphics/Effect/IEffectFog.cs"
	"Graphics/Effect/IEffectLights.cs"
	"Graphics/Effect/IEffectMatrices.cs"
	"Graphics/Effect/Resources.cs"
	"Graphics/Effect/StockEffects/AlphaTestEffect.cs"
	"Graphics/Effect/StockEffects/BasicEffect.cs"
	"Graphics/Effect/StockEffects/DualTextureEffect.cs"
	"Graphics/Effect/StockEffects/EffectHelpers.cs"
	"Graphics/Effect/StockEffects/EnvironmentMapEffect.cs"
	"Graphics/Effect/StockEffects/SkinnedEffect.cs"
	"Graphics/Effect/StockEffects/SpriteEffect.cs"
	"Graphics/FNA3D.cs"
	"Graphics/GraphicsAdapter.cs"
	"Graphics/GraphicsDevice.cs"
	"Graphics/GraphicsDeviceStatus.cs"
	"Graphics/GraphicsProfile.cs"
	"Graphics/GraphicsResource.cs"
	"Graphics/IGraphicsDeviceService.cs"
	"Graphics/IRenderTarget.cs"
	"Graphics/Model.cs"
	"Graphics/ModelBone.cs"
	"Graphics/ModelBoneCollection.cs"
	"Graphics/ModelEffectCollection.cs"
	"Graphics/ModelMesh.cs"
	"Graphics/ModelMeshCollection.cs"
	"Graphics/ModelMeshPart.cs"
	"Graphics/ModelMeshPartCollection.cs"
	"Graphics/NoSuitableGraphicsDeviceException.cs"
	"Graphics/OcclusionQuery.cs"
	"Graphics/PackedVector/Alpha8.cs"
	"Graphics/PackedVector/Bgr565.cs"
	"Graphics/PackedVector/Bgra4444.cs"
	"Graphics/PackedVector/Bgra5551.cs"
	"Graphics/PackedVector/Byte4.cs"
	"Graphics/PackedVector/HalfSingle.cs"
	"Graphics/PackedVector/HalfTypeHelper.cs"
	"Graphics/PackedVector/HalfVector2.cs"
	"Graphics/PackedVector/HalfVector4.cs"
	"Graphics/PackedVector/IPackedVector.cs"
	"Graphics/PackedVector/NormalizedByte2.cs"
	"Graphics/PackedVector/NormalizedByte4.cs"
	"Graphics/PackedVector/NormalizedShort2.cs"
	"Graphics/PackedVector/NormalizedShort4.cs"
	"Graphics/PackedVector/Rg32.cs"
	"Graphics/PackedVector/Rgba64.cs"
	"Graphics/PackedVector/Rgba1010102.cs"
	"Graphics/PackedVector/Short2.cs"
	"Graphics/PackedVector/Short4.cs"
	"Graphics/PipelineCache.cs"
	"Graphics/PresentationParameters.cs"
	"Graphics/PresentInterval.cs"
	"Graphics/PrimitiveType.cs"
	"Graphics/ProfileCapabilities.cs"
	"Graphics/RenderTarget2D.cs"
	"Graphics/RenderTargetBinding.cs"
	"Graphics/RenderTargetCube.cs"
	"Graphics/RenderTargetUsage.cs"
	"Graphics/ResourceCreatedEventArgs.cs"
	"Graphics/ResourceDestroyedEventArgs.cs"
	"Graphics/SamplerStateCollection.cs"
	"Graphics/SetDataOptions.cs"
	"Graphics/SpriteBatch.cs"
	"Graphics/SpriteEffects.cs"
	"Graphics/SpriteFont.cs"
	"Graphics/SpriteSortMode.cs"
	"Graphics/States/Blend.cs"
	"Graphics/States/BlendFunction.cs"
	"Graphics/States/BlendState.cs"
	"Graphics/States/CompareFunction.cs"
	"Graphics/States/CullMode.cs"
	"Graphics/States/DepthStencilState.cs"
	"Graphics/States/FillMode.cs"
	"Graphics/States/RasterizerState.cs"
	"Graphics/States/SamplerState.cs"
	"Graphics/States/StencilOperation.cs"
	"Graphics/States/TextureAddressMode.cs"
	"Graphics/States/TextureFilter.cs"
	"Graphics/SurfaceFormat.cs"
	"Graphics/Texture.cs"
	"Graphics/Texture2D.cs"
	"Graphics/Texture3D.cs"
	"Graphics/TextureCollection.cs"
	"Graphics/TextureCube.cs"
	"Graphics/Vertices/BufferUsage.cs"
	"Graphics/Vertices/DynamicIndexBuffer.cs"
	"Graphics/Vertices/DynamicVertexBuffer.cs"
	"Graphics/Vertices/IndexBuffer.cs"
	"Graphics/Vertices/IndexElementSize.cs"
	"Graphics/Vertices/IVertexType.cs"
	"Graphics/Vertices/VertexBuffer.cs"
	"Graphics/Vertices/VertexBufferBinding.cs"
	"Graphics/Vertices/VertexDeclaration.cs"
	"Graphics/Vertices/VertexDeclarationCache.cs"
	"Graphics/Vertices/VertexElement.cs"
	"Graphics/Vertices/VertexElementFormat.cs"
	"Graphics/Vertices/VertexElementUsage.cs"
	"Graphics/Vertices/VertexPositionColor.cs"
	"Graphics/Vertices/VertexPositionColorTexture.cs"
	"Graphics/Vertices/VertexPositionNormalTexture.cs"
	"Graphics/Vertices/VertexPositionTexture.cs"
	"Graphics/Viewport.cs"
	"Graphics/X360TexUtil.cs"
	"GraphicsDeviceInformation.cs"
	"GraphicsDeviceManager.cs"
	"IDrawable.cs"
	"IGameComponent.cs"
	"IGraphicsDeviceManager.cs"
	"Input/Buttons.cs"
	"Input/ButtonState.cs"
	"Input/GamePad.cs"
	"Input/GamePadButtons.cs"
	"Input/GamePadCapabilities.cs"
	"Input/GamePadDeadZone.cs"
	"Input/GamePadDPad.cs"
	"Input/GamePadState.cs"
	"Input/GamePadThumbSticks.cs"
	"Input/GamePadTriggers.cs"
	"Input/GamePadType.cs"
	"Input/Keyboard.cs"
	"Input/KeyboardState.cs"
	"Input/Keys.cs"
	"Input/KeyState.cs"
	"Input/Mouse.cs"
	"Input/MouseState.cs"
	"Input/TextInputEXT.cs"
	"Input/Touch/GestureDetector.cs"
	"Input/Touch/GestureSample.cs"
	"Input/Touch/GestureType.cs"
	"Input/Touch/TouchCollection.cs"
	"Input/Touch/TouchLocation.cs"
	"Input/Touch/TouchLocationState.cs"
	"Input/Touch/TouchPanel.cs"
	"Input/Touch/TouchPanelCapabilities.cs"
	"IUpdateable.cs"
	"LaunchParameters.cs"
	"MathHelper.cs"
	"Matrix.cs"
	"Media/MediaPlayer.cs"
	"Media/MediaQueue.cs"
	"Media/MediaState.cs"
	"Media/Song.cs"
	"Media/SongCollection.cs"
	"Media/VideoSoundtrackType.cs"
	"Media/VisualizationData.cs"
	"Media/Xiph/Video.cs"
	"Media/Xiph/VideoPlayer.cs"
	"NamespaceDocs.cs"
	"Plane.cs"
	"PlaneIntersectionType.cs"
	"PlayerIndex.cs"
	"Point.cs"
	"PreparingDeviceSettingsEventArgs.cs"
	"Properties/AssemblyInfo.cs"
	"Quaternion.cs"
	"Ray.cs"
	"Rectangle.cs"
	"Storage/StorageContainer.cs"
	"Storage/StorageDevice.cs"
	"Storage/StorageDeviceNotConnectedException.cs"
	"TitleContainer.cs"
	"TitleLocation.cs"
	"Utilities/AssemblyHelper.cs"
	"Utilities/FileHelpers.cs"
	"Utilities/FNAInternalExtensions.cs"
	"Utilities/IntPtrExtensions.cs"
	"Utilities/MarshalHelper.cs"
	"Utilities/StreamExtensions.cs"
	"Utilities/XamarinHelper.cs"
	"Vector2.cs"
	"Vector3.cs"
	"Vector4.cs"
)

if("${CMAKE_BUILD_TYPE}" STREQUAL "DEBUG")
  set(MONO_RELEASE_TYPE debug)
  set(FNA_DEFINES DEBUG)
else()
  set(MONO_RELEASE_TYPE optimize)
  set(FNA_DEFINES "")
endif()

set(FNA_REFERENCES
    FAudio-CS.dll
    Theorafile.dll
    SDL2.dll
    SDL2_image.dll
    SDL2_mixer.dll
)

set(RESDIR "Graphics/Effect/StockEffects/FXB")
set(RESNAME "Microsoft.Xna.Framework.Graphics.Effect.Resources")

set(FNA_RESOURCES
    "${RESDIR}/AlphaTestEffect.fxb,${RESNAME}.AlphaTestEffect.fxb"
    "${RESDIR}/BasicEffect.fxb,${RESNAME}.BasicEffect.fxb"
    "${RESDIR}/DualTextureEffect.fxb,${RESNAME}.DualTextureEffect.fxb"
    "${RESDIR}/EnvironmentMapEffect.fxb,${RESNAME}.EnvironmentMapEffect.fxb"
    "${RESDIR}/SkinnedEffect.fxb,${RESNAME}.SkinnedEffect.fxb"
    "${RESDIR}/SpriteEffect.fxb,${RESNAME}.SpriteEffect.fxb"
    "Graphics/Effect/YUVToRGBA/YUVToRGBAEffect.fxb,${RESNAME}.YUVToRGBAEffect.fxb"
)

set(LIBRARY_NAME FNA)
compile_mono_assembly_aot(
    ASSEMBLY ${LIBRARY_NAME}
    SOURCES ${FNA_SOURCES}
	RESOURCES ${FNA_RESOURCES}
    CONFIG "../app.config"
    DEFINES ${FNA_DEFINES}
    REFERENCES ${FNA_REFERENCES}
    FLAGS unsafe ${MONO_RELEASE_TYPE}
)
add_library(VML${LIBRARY_NAME} STATIC
    ${LIBRARY_NAME}.c
    ${LIBRARY_NAME}.dll.s
)

add_dependencies(VML${LIBRARY_NAME} FNADependencies)

install(
  TARGETS VML${LIBRARY_NAME}
  DESTINATION lib
)

install(
  FILES 
    ${CMAKE_BINARY_DIR}/${LIBRARY_NAME}.dll
  DESTINATION lib/mono
)

install(
  FILES ${LIBRARY_NAME}.h 
  DESTINATION include/VML
)